add instrumented tests using dagger and mockito

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.pscurzytek.popularmovies.MainActivity">
+    tools:context="com.example.pscurzytek.popularmovies.activities.MainActivity">
 
     <GridView
         android:id="@+id/thumbnails_grid"
@@ -14,7 +14,7 @@
         android:numColumns="auto_fit"
         android:verticalSpacing="0dp"
         android:horizontalSpacing="0dp"
-        tools:context=".MainActivity"
+        tools:context=".activities.MainActivity"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
