--- a/app/src/main/res/layout/fragment_trailers.xml
+++ b/app/src/main/res/layout/fragment_trailers.xml
@@ -1,15 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    tools:context=".fragments.TrailersFragment">
 
-    <TextView
-        android:id="@+id/pageNumber_tv"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="@string/activity_details" />
-
-</FrameLayout>
+<android.support.v7.widget.RecyclerView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/trailers_rv"
+    android:layout_height="match_parent"
+    android:layout_width="match_parent" />
