--- a/app/src/main/res/layout/fragment_recycler_view.xml
+++ b/app/src/main/res/layout/fragment_recycler_view.xml
@@ -2,6 +2,6 @@
 
 <android.support.v7.widget.RecyclerView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/trailers_rv"
+    android:id="@+id/recycler_view"
     android:layout_height="match_parent"
     android:layout_width="match_parent" />
