style review list item

--- a/app/src/main/res/layout/list_item_review.xml
+++ b/app/src/main/res/layout/list_item_review.xml
@@ -17,6 +17,7 @@
         android:width="100sp"
         android:gravity="center"
         android:maxLines="3"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -30,11 +31,12 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:gravity="start"
-        android:paddingEnd="8sp"
-        android:paddingStart="8sp"
-        android:maxLines="2"
         android:ellipsize="end"
+        android:gravity="start"
+        android:maxLines="2"
+        android:padding="8sp"
+        android:textStyle="italic"
+        android:background="@drawable/border"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/author_tv"
