enable playing trailers on youtube

--- a/app/src/main/res/layout/list_item_review.xml
+++ b/app/src/main/res/layout/list_item_review.xml
@@ -10,12 +10,12 @@
     <TextView
         android:id="@+id/author_tv"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_marginBottom="8dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         android:width="100sp"
-        android:gravity="center"
+        android:gravity="top|center_horizontal"
         android:maxLines="3"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
