--- a/app/src/main/res/layout/fragment_movie_details.xml
+++ b/app/src/main/res/layout/fragment_movie_details.xml
@@ -32,12 +32,13 @@
         tools:contentDescription="@string/sample_title" />
 
     <ImageView
-        android:id="@+id/star_iv"
+        android:id="@+id/favorite_iv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginTop="8dp"
         android:src="@android:drawable/btn_star_big_off"
+        android:onClick="onFavoriteClicked"
         app:layout_constraintEnd_toEndOf="@+id/poster_iv"
         app:layout_constraintTop_toTopOf="@+id/poster_iv" />
 
